<resources>
    <string name="app_name">My Application</string>
    <string name="input_text">Введите текст в поле:</string>
    <string name="edit_text_hint">Введите текст</string>
    <string name="button_text">ОК</string>
</resources>
