<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_weight="1"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/textviewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="dfgdfg"
        android:textSize="40sp">
    </TextView>
    <TextView
        android:id="@+id/textviewOld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/textviewName"
        tools:text="dfgdfg">
    </TextView>
</RelativeLayout>